--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zero-lab-project",
+  "name": "structure-styled-components-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
